--- a/package.json
+++ b/package.json
@@ -8,6 +8,11 @@
     "local": "./node_modules/.bin/babel-node index.js env=local",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "babel": {
+    "presets": [
+      "es2015"
+    ]
+  },
   "keywords": [
     "BulkCreate",
     "mysql",
@@ -18,6 +23,10 @@
   "dependencies": {
     "babel-cli": "^6.24.1",
     "babel-preset-es2015": "^6.24.1",
-    "mysql": "^2.13.0"
+    "chalk": "^2.0.1",
+    "csv-parse": "^1.2.0",
+    "inquirer": "^3.2.0",
+    "mysql": "^2.13.0",
+    "stream-transform": "^0.1.2"
   }
 }
